# Simple-Tcl-Minifier

./: .clang-format  .flake8  .gitignore  .pytest.ini  .ruff.toml  CHANGELOG.md  Makefile  README.md  benchmark.py  pyproject.toml  requirements_dev.txt  requirements_memory_leak.txt  setup.py  tmp_helper.py
.github/workflows/: tag-and-release.yml  validate-code.yml
personal_simple_tcl_minifier/: parse.py  parse.pyi
personal_simple_tcl_minifier/c_extensions/: parse.c  tcl_parse.c
personal_simple_tcl_minifier/c_extensions/includes/: c_optimizations.h  parse.h  tcl_parse.h
personal_simple_tcl_minifier/c_extensions/python_modules/: parse.c
tests/: test_memory_leak.py  test_minify.py  test_parse.py  utils.py
